[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/mob/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/world/door_area.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/morioh.png" type="Texture" id=3]
[ext_resource path="res://src/world/camera.gd" type="Script" id=4]
[ext_resource path="res://src/world/map_impl.gd" type="Script" id=5]
[ext_resource path="res://src/mob/waltuh.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/mob/JOJO.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/dialog/dialog_area.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/menu/achievement.tscn" type="PackedScene" id=9]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="StreamTexture" id=6]

[sub_resource type="TileSet" id=7]
0/name = "icon.png 0"
0/texture = SubResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Morioh_impl" type="Node2D"]
script = ExtResource( 5 )

[node name="tilemap" type="TileMap" parent="."]
tile_set = SubResource( 7 )
show_collision = true
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131071, 0, 0, 65544, 0, 0, 196607, 0, 0, 131080, 0, 0, 262143, 0, 0, 196616, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0 )

[node name="backgrounds" type="Node2D" parent="."]

[node name="morioh" type="Sprite" parent="backgrounds"]
texture = ExtResource( 3 )
centered = false

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 54, 221 )

[node name="camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 270
limit_smoothed = true
script = ExtResource( 4 )

[node name="door_area" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 222 )
path_to_scene = "res://src/world/event_anjimeh.tscn"
pos = Vector2( 340, 221 )

[node name="Waltuh" parent="." instance=ExtResource( 6 )]
position = Vector2( 320, 224 )

[node name="dialog_area" parent="Waltuh" instance=ExtResource( 8 )]
position = Vector2( 0, -1 )
did = 5
alt_did = 6

[node name="JOJO" parent="." instance=ExtResource( 7 )]
position = Vector2( 104, 224 )

[node name="dialog_area" parent="JOJO" instance=ExtResource( 8 )]
position = Vector2( 0, -2 )
did = 8
alt_did = 9

[node name="achievement" parent="." instance=ExtResource( 9 )]
position = Vector2( 422, 224 )

[connection signal="change_scene" from="door_area" to="." method="_on_change_scene"]
[connection signal="dialog_entered" from="Waltuh/dialog_area" to="." method="_on_dialog_entered"]
[connection signal="dialog_entered" from="JOJO/dialog_area" to="." method="_on_dialog_entered"]
[connection signal="achievement" from="achievement" to="." method="_on_achievement_popup"]
